Updated db